Attempt to fix text selection headache on mobile, fix bug with mobile trigger

--- a/ng-contextmenu.css
+++ b/ng-contextmenu.css
@@ -44,3 +44,21 @@
     	background-color: #dddddd;
 }
 
+.ng-contextmenu {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.ng-contextmenu.open {
+    -webkit-touch-callout: auto;
+    -webkit-user-select: auto;
+    -khtml-user-select: auto;
+    -moz-user-select: auto;
+    -ms-user-select: auto;
+    user-select: auto;
+}
+
